--- a/src/Components/ProductCard/productCard.module.scss
+++ b/src/Components/ProductCard/productCard.module.scss
@@ -7,6 +7,8 @@
   text-align: center;
   margin-bottom: 24px;
   min-height: 320px;
+  margin-right: 4px;
+  margin-left: 4px;
   .activeIngradient {
     .activeIngredientLabel {
       margin-right: 3px;
