--- a/src/Pages/ProductByCategory/productByCategory.module.scss
+++ b/src/Pages/ProductByCategory/productByCategory.module.scss
@@ -4,7 +4,6 @@
   margin: 16px;
   background-color: $headerPrimaryColor;
   border-radius: 8px;
-  padding: 0 0 120px 0;
 
   .pageHeading {
     font-weight: 600;
@@ -13,9 +12,9 @@
     border-bottom: 1px solid $borderColor;
   }
   .productConatienr {
-    padding: 32px;
+    margin: 16px 0;
+    padding: 32px 32px 0 32px;
     display: grid;
     grid-template-columns: 24% 24% 24% 24%;
-    gap: 1%;
   }
 }
